k8s/namespaces/ingress/nginx/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-snippetsfilters
  namespace: ingress
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: "*"
  to:
    - group: gateway.nginx.org
      kind: SnippetsFilter
