k8s/namespaces/ingress/nginx/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: ingress
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.hosted.fail"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.hosted.fail"
      tls:
        mode: Terminate
        certificateRefs:
          - name: hosted-fail-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: ssh
      protocol: TCP
      port: 22
      allowedRoutes:
        namespaces:
          from: All
    - name: syslog-tcp
      protocol: TCP
      port: 514
      allowedRoutes:
        namespaces:
          from: All
    - name: syslog-udp
      protocol: UDP
      port: 514
      allowedRoutes:
        namespaces:
          from: All
    - name: sunshine-stream-tcp
      protocol: TCP
      port: 47984
      allowedRoutes:
        namespaces:
          from: All
    - name: sunshine-stream-udp
      protocol: UDP
      port: 47984
      allowedRoutes:
        namespaces:
          from: All
    - name: sunshine-pairing
      protocol: TCP
      port: 47989
      allowedRoutes:
        namespaces:
          from: All
