k8s/namespaces/ingress/nginx/redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: ingress
spec:
  parentRefs:
    - name: nginx-gateway
      sectionName: http
  hostnames:
    - "*.hosted.fail"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
